# osdev

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md
etc/: Makefile  doit.conf  group  motd  passwd  shadow  shrc
etc/doit.d/: devconsole.service  start-sh  systerm.multiuser.service  systerm.service  systerm.singleuser.service  xtcwm.service
etc/xtc/: xtcinit.rc  xtcwm.rc  xtcwm.rc.local
include/: stdio.h  stdlib.h  string.h
include/ds/: dict.h  membuf.h
include/rtl/: dict.h  list.h  malloc.h  printf.h  string.h  types.h
include/sys/: device.h  dirent.h  errno.h  fcntl.h  interrupt.h  kernel.h  limits.h  mount.h  net.h  proc.h  stat.h  syscall.h  types.h  vfs.h  vm.h  wait.h
lib/libcollections/: Makefile
ports/: Makefile  README.md  config.mk
ports/kilo/: Makefile
ports/lua/: Makefile
sbin/: Makefile
sbin/doit/: Makefile  dict.h  doit  doit.c  ini.c  ini.h  main.c
sbin/mount/: Makefile  mount.c
sbin/newfs/: Makefile  newfs.c
sbin/newtty/: .gitignore  Makefile  main.c  newtty.c
sbin/systerm/: Makefile  keymap.h  main.c
sys/: Makefile  config.mk  linker.ld
sys/dev/: kmsg.c  pseudo.c  pseudo_device.c  pty.c  vga_textscreen.c
sys/ds/: dict.c  fifo.c  fifo.h  list.c  list.h  membuf.c  membuf.h
sys/fs/: devfs.c  ext2.c  initramfs.c  tarfs.c  tmpfs.c
toolchain/: Makefile
usr.bin/: Makefile
usr.games/: Makefile
usr.lib/: Makefile
usr.lib/newlib/libc/: Makefile.am  dirent.c  getline.c  group.c  libgen.c  premain.c  signal.c  syscalls.c  termios.c
usr.libexec/: Makefile
usr.share/: Makefile
usr.xtc/: Makefile
(+343 files in other folders)
